# webserver-template

./: .gitignore  README.md  README_TEMPLATE.md  cargo-generate.toml  pre-script.rhai
frontend/: .prettierrc.json  openapi.json  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/scripts/: gen-api.sh
frontend/src/: i18n.ts  index.css  main.tsx  router.tsx
frontend/src/api/: api.ts  error.tsx  ws.ts
frontend/src/components/: form.tsx  step-bar.tsx
frontend/src/context/: user.tsx
frontend/src/routes/: __root.tsx  index.lazy.tsx
frontend/src/utils/: console.ts  event-emitter.ts  result.ts
frontend/src/views/login/: login.tsx
webserver/: Cargo.toml  Makefile.toml
webserver/src/: cli.rs  config.rs  global.rs  main.rs
webserver/src/global/: mod.rs  ws.rs
webserver/src/http/: mod.rs  server.rs  session_keys.rs
webserver/src/http/common/: errors.rs  schemas.rs
webserver/src/http/extractors/: api_json.rs  json.rs  mod.rs  session_user.rs
webserver/src/http/frontend_handler/: mod.rs
webserver/src/http/frontend_handler/auth/: handler.rs
webserver/src/http/frontend_handler/oidc/: handler.rs  schema.rs
webserver/src/http/handler_frontend/: mod.rs
webserver/src/http/handler_frontend/auth/: handler.rs  handler_common.rs  mod.rs  schema.rs  utils.rs
webserver/src/http/handler_frontend/oidc/: handler.rs  handler_common.rs  mod.rs  schema.rs
webserver/src/http/handler_frontend/user_invites/: handler_admin.rs  handler_common.rs  mod.rs  schema.rs  utils.rs
webserver/src/http/handler_frontend/users/: handler.rs  handler_admin.rs  handler_common.rs  mod.rs  schema.rs  utils.rs
webserver/src/http/handler_frontend/ws/: handler.rs  handler_common.rs  mod.rs  schema.rs
webserver/src/http/middlewares/: auth_required.rs  mod.rs  role_required.rs
webserver/src/models/: mod.rs
webserver/src/models/role/: mod.rs
webserver/src/models/user/: impls.rs  mod.rs  patches.rs
webserver/src/utils/: checked_string.rs  hashing.rs  links.rs  mod.rs  not_empty_string.rs  schemars.rs  secure_string.rs  swap_lock.rs  totp.rs  webauthn.rs
